Closed Bug 682055 Opened 13 years ago Closed 13 years ago

IonMonkey: Missing break in visitMathD

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
      No description provided.
Attachment #555812 - Flags: review?(hv1989)
Comment on attachment 555812 [details] [diff] [review]
fix

Review of attachment 555812 [details] [diff] [review]:
-----------------------------------------------------------------

how could I ever miss this!
Attachment #555812 - Flags: review?(hv1989) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/8939f6d48a22
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.