Fix missing break in visitMathToD (bug 682055, r=h4writer).